syntax = "proto3";

option csharp_namespace = "eBike.Services.Bikes";

package bikes;

// The request message containing the user's name.
message BikeRequest {
  string BikeId = 1;
  string Name = 2;
  double Latitude = 3;
  double Longitude = 4;
  string UserId = 5;
}

enum Operation {
	Create = 0;
	Update = 1;
	Error = 2;
}

message BikeReply {
  string BikeId = 1;
  Operation OperationResult = 2;
}

message UserRequest {
	string UserId = 1;
}

message UserBikeResponse {
  string BikeId = 1;
  string Name = 2;
  double Latitude = 3;
  double Longitude = 4;
  string UserId = 5;
}

message UserBikesResponse {
	repeated UserBikeResponse Response = 1;
}

message BikeAggregatorResponse {
    string Country = 1;
    int32 Count = 2;
}

message BikeAggregatorsResponse {
	repeated BikeAggregatorResponse Countries = 1;
}